Chore: 빌드 설정 추가
Change-Id: Ibceeddb4c97dcf86b96a9648e25084854cdd211e

Former-commit-id: 097d3ae80ababa70795a5c9c89a3eed466812b6e

--- a/card/settings.gradle
+++ b/card/settings.gradle
@@ -1,3 +1,1 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:13fd583f51f83fe949d4261e0033f0038d58158930c3d34d869a4c330e17bed5
-size 26
+rootProject.name = 'card'
