--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,3 @@
-version: '3.8'
-
-services:
-  frontend:
-    build:
-      context: ./frontend-web
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80"
-
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-
-# card-service:
-#   build:
-#     context: ./card
-#     dockerfile: Dockerfile
-#   ports:
-#     - "8001:8000"
+version https://git-lfs.github.com/spec/v1
+oid sha256:33465d0577d491f57147b5df2692860de2f7dc052936f8f270cc4e931fe86be5
+size 355
