--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,3 @@
-version: '3.8'
-
-services:
-  frontend:
-    build:
-      context: ./frontend-web
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80"
-
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-
-# card-service:
-#   build:
-#     context: ./card
-#     dockerfile: Dockerfile
-#   ports:
-#     - "8001:8000"
+version https://git-lfs.github.com/spec/v1
+oid sha256:f3f75e04ab3feff657d13e2ba35f9311c32d0acc0dfdc2a8cd6f91df1f2eca1e
+size 427
