--- a/card/docker-compose.yml
+++ b/card/docker-compose.yml
@@ -1,16 +1,3 @@
-version: '3.4'
-
-services:
-  redis:
-    image: redis
-    ports:
-      - 6379:6379
-  redistest:
-    image: redistest
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    ports:
-      - 8080:8080
-    depends_on:
-      - redis
+version https://git-lfs.github.com/spec/v1
+oid sha256:41ca12ef1edbda6c61970dd28dc95644ffa6c731a411ab0d6695b0b6f422b5b9
+size 232
